# earpods-audio-usb-nx

./: Cargo.toml  Makefile  npdm.json  rust-toolchain.toml
src/: audio.c  audio.h  main.c  main.rs  usb.c  usb.h  utils.h
