[package]
name = "earpods-audio-usb-nx"
authors = ["aarch64-switch-rs authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx", features=["services", "console"] }

# For help / more information, see https://github.com/aarch64-switch-rs/cargo-nx/wiki

[package.metadata.nx.nro]
nacp = { default_name = "console-interactive", default_author = "XorTroll", version = "Example" }
